src/objects/competitor_colors__c.object
<CustomObject>
    <description>join between scheme and competitor color</description>
    <fields>
        <fullName>Color_Formula_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Color Formula needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color_text__c</fullName>
        <label>Color text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Color__c</fullName>
        <label>Color</label>
        <referenceTo>Competitor_Color__c</referenceTo>
        <relationshipLabel>Color Selection</relationshipLabel>
        <relationshipName>competitor_colors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EFB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will you need EFB</description>
        <inlineHelpText>Do you need this custom color uploaded into EFB?</inlineHelpText>
        <label>EFB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_placement__c</fullName>
        <label>Other placement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balcony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walkway</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>competitor_colors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheme__c</fullName>
        <label>Scheme</label>
        <referenceTo>Scheme__c</referenceTo>
        <relationshipName>competitor_colors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Draw Down Type</label>
        <picklist>
            <picklistValues>
                <fullName>regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>adhesive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mini-chip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_location__c</fullName>
        <label>Type of location</label>
        <picklist>
            <picklistValues>
                <fullName>Interior - Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior - Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior - Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior - Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior - PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_draw_downs__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of draw downs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Color Selection</label>
    <nameField>
        <label>competitor colors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Color Selection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>